tests/baselines/reference/comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.errors.txt
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(26,12): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(26,12): error TS2365: Operator '<' cannot be applied to types '{ [a: string]: string; }' and '{ [b: string]: number; }'.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(26,17): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(27,12): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(27,12): error TS2365: Operator '<' cannot be applied to types '{ [index: string]: Base; }' and '{ [index: string]: C; }'.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(27,17): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(28,12): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(28,12): error TS2365: Operator '<' cannot be applied to types '{ [index: number]: Base; }' and '{ [index: number]: C; }'.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(28,17): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(29,12): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(29,17): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(31,12): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(31,12): error TS2365: Operator '<' cannot be applied to types '{ [b: string]: number; }' and '{ [a: string]: string; }'.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(31,17): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(32,12): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(32,12): error TS2365: Operator '<' cannot be applied to types '{ [index: string]: C; }' and '{ [index: string]: Base; }'.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(32,17): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(33,12): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(33,12): error TS2365: Operator '<' cannot be applied to types '{ [index: number]: C; }' and '{ [index: number]: Base; }'.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(33,17): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(34,12): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(34,17): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(37,12): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(37,12): error TS2365: Operator '>' cannot be applied to types '{ [a: string]: string; }' and '{ [b: string]: number; }'.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(37,17): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(38,12): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(38,12): error TS2365: Operator '>' cannot be applied to types '{ [index: string]: Base; }' and '{ [index: string]: C; }'.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(38,17): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(39,12): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(39,12): error TS2365: Operator '>' cannot be applied to types '{ [index: number]: Base; }' and '{ [index: number]: C; }'.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(39,17): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(40,12): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(40,17): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(42,12): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(42,12): error TS2365: Operator '>' cannot be applied to types '{ [b: string]: number; }' and '{ [a: string]: string; }'.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(42,17): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(43,12): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(43,12): error TS2365: Operator '>' cannot be applied to types '{ [index: string]: C; }' and '{ [index: string]: Base; }'.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(43,17): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(44,12): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(44,12): error TS2365: Operator '>' cannot be applied to types '{ [index: number]: C; }' and '{ [index: number]: Base; }'.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(44,17): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(45,12): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(45,17): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(48,12): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(48,12): error TS2365: Operator '<=' cannot be applied to types '{ [a: string]: string; }' and '{ [b: string]: number; }'.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(48,18): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(49,12): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(49,12): error TS2365: Operator '<=' cannot be applied to types '{ [index: string]: Base; }' and '{ [index: string]: C; }'.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(49,18): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(50,12): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(50,12): error TS2365: Operator '<=' cannot be applied to types '{ [index: number]: Base; }' and '{ [index: number]: C; }'.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(50,18): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(51,12): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(51,18): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(53,12): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(53,12): error TS2365: Operator '<=' cannot be applied to types '{ [b: string]: number; }' and '{ [a: string]: string; }'.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(53,18): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(54,12): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(54,12): error TS2365: Operator '<=' cannot be applied to types '{ [index: string]: C; }' and '{ [index: string]: Base; }'.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(54,18): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(55,12): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(55,12): error TS2365: Operator '<=' cannot be applied to types '{ [index: number]: C; }' and '{ [index: number]: Base; }'.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(55,18): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(56,12): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(56,18): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(59,12): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(59,12): error TS2365: Operator '>=' cannot be applied to types '{ [a: string]: string; }' and '{ [b: string]: number; }'.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(59,18): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(60,12): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(60,12): error TS2365: Operator '>=' cannot be applied to types '{ [index: string]: Base; }' and '{ [index: string]: C; }'.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(60,18): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(61,12): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(61,12): error TS2365: Operator '>=' cannot be applied to types '{ [index: number]: Base; }' and '{ [index: number]: C; }'.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(61,18): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(62,12): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(62,18): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(64,12): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(64,12): error TS2365: Operator '>=' cannot be applied to types '{ [b: string]: number; }' and '{ [a: string]: string; }'.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(64,18): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(65,12): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(65,12): error TS2365: Operator '>=' cannot be applied to types '{ [index: string]: C; }' and '{ [index: string]: Base; }'.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(65,18): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(66,12): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(66,12): error TS2365: Operator '>=' cannot be applied to types '{ [index: number]: C; }' and '{ [index: number]: Base; }'.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(66,18): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(67,12): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(67,18): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(70,12): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(70,12): error TS2367: This comparison appears to be unintentional because the types '{ [a: string]: string; }' and '{ [b: string]: number; }' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(70,18): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(71,12): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(71,12): error TS2367: This comparison appears to be unintentional because the types '{ [index: string]: Base; }' and '{ [index: string]: C; }' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(71,18): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(72,12): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(72,12): error TS2367: This comparison appears to be unintentional because the types '{ [index: number]: Base; }' and '{ [index: number]: C; }' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(72,18): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(73,12): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(73,18): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(75,12): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(75,12): error TS2367: This comparison appears to be unintentional because the types '{ [b: string]: number; }' and '{ [a: string]: string; }' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(75,18): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(76,12): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(76,12): error TS2367: This comparison appears to be unintentional because the types '{ [index: string]: C; }' and '{ [index: string]: Base; }' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(76,18): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(77,12): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(77,12): error TS2367: This comparison appears to be unintentional because the types '{ [index: number]: C; }' and '{ [index: number]: Base; }' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(77,18): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(78,12): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(78,18): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(81,12): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(81,12): error TS2367: This comparison appears to be unintentional because the types '{ [a: string]: string; }' and '{ [b: string]: number; }' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(81,18): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(82,12): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(82,12): error TS2367: This comparison appears to be unintentional because the types '{ [index: string]: Base; }' and '{ [index: string]: C; }' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(82,18): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(83,12): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(83,12): error TS2367: This comparison appears to be unintentional because the types '{ [index: number]: Base; }' and '{ [index: number]: C; }' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(83,18): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(84,12): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(84,18): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(86,12): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(86,12): error TS2367: This comparison appears to be unintentional because the types '{ [b: string]: number; }' and '{ [a: string]: string; }' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(86,18): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(87,12): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(87,12): error TS2367: This comparison appears to be unintentional because the types '{ [index: string]: C; }' and '{ [index: string]: Base; }' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(87,18): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(88,12): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(88,12): error TS2367: This comparison appears to be unintentional because the types '{ [index: number]: C; }' and '{ [index: number]: Base; }' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(88,18): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(89,12): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(89,18): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(92,12): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(92,12): error TS2367: This comparison appears to be unintentional because the types '{ [a: string]: string; }' and '{ [b: string]: number; }' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(92,19): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(93,12): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(93,12): error TS2367: This comparison appears to be unintentional because the types '{ [index: string]: Base; }' and '{ [index: string]: C; }' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(93,19): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(94,12): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(94,12): error TS2367: This comparison appears to be unintentional because the types '{ [index: number]: Base; }' and '{ [index: number]: C; }' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(94,19): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(95,12): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(95,19): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(97,12): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(97,12): error TS2367: This comparison appears to be unintentional because the types '{ [b: string]: number; }' and '{ [a: string]: string; }' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(97,19): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(98,12): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(98,12): error TS2367: This comparison appears to be unintentional because the types '{ [index: string]: C; }' and '{ [index: string]: Base; }' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(98,19): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(99,12): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(99,12): error TS2367: This comparison appears to be unintentional because the types '{ [index: number]: C; }' and '{ [index: number]: Base; }' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(99,19): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(100,12): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(100,19): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(103,12): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(103,12): error TS2367: This comparison appears to be unintentional because the types '{ [a: string]: string; }' and '{ [b: string]: number; }' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(103,19): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(104,12): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(104,12): error TS2367: This comparison appears to be unintentional because the types '{ [index: string]: Base; }' and '{ [index: string]: C; }' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(104,19): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(105,12): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(105,12): error TS2367: This comparison appears to be unintentional because the types '{ [index: number]: Base; }' and '{ [index: number]: C; }' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(105,19): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(106,12): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(106,19): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(108,12): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(108,12): error TS2367: This comparison appears to be unintentional because the types '{ [b: string]: number; }' and '{ [a: string]: string; }' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(108,19): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(109,12): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(109,12): error TS2367: This comparison appears to be unintentional because the types '{ [index: string]: C; }' and '{ [index: string]: Base; }' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(109,19): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(110,12): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(110,12): error TS2367: This comparison appears to be unintentional because the types '{ [index: number]: C; }' and '{ [index: number]: Base; }' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(110,19): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(111,12): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts(111,19): error TS2454: Variable 'a4' is used before being assigned.


==== comparisonOperatorWithNoRelationshipObjectsOnIndexSignature.ts (176 errors) ====
    class Base {
        public a: string;
    }
    
    class Derived extends Base {
        public b: string;
    }
    
    class C {
        public c: string;
    }
    
    var a1: { [a: string]: string };
    var b1: { [b: string]: number };
    
    var a2: { [index: string]: Base };
    var b2: { [index: string]: C };
    
    var a3: { [index: number]: Base };
    var b3: { [index: number]: C };
    
    var a4: { [index: number]: Derived };
    var b4: { [index: string]: Base };
    
    // operator <
    var r1a1 = a1 < b1;
               ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
               ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '{ [a: string]: string; }' and '{ [b: string]: number; }'.
                    ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
    var r1a2 = a2 < b2;
               ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
               ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '{ [index: string]: Base; }' and '{ [index: string]: C; }'.
                    ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
    var r1a3 = a3 < b3;
               ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
               ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '{ [index: number]: Base; }' and '{ [index: number]: C; }'.
                    ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
    var r1a4 = a4 < b4;
               ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
    
    var r1b1 = b1 < a1;
               ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
               ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '{ [b: string]: number; }' and '{ [a: string]: string; }'.
                    ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
    var r1b2 = b2 < a2;
               ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
               ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '{ [index: string]: C; }' and '{ [index: string]: Base; }'.
                    ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    var r1b3 = b3 < a3;
               ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
               ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '{ [index: number]: C; }' and '{ [index: number]: Base; }'.
                    ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    var r1b4 = b4 < a4;
               ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
    
    // operator >
    var r2a1 = a1 > b1;
               ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
               ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types '{ [a: string]: string; }' and '{ [b: string]: number; }'.
                    ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
    var r2a2 = a2 > b2;
               ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
               ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types '{ [index: string]: Base; }' and '{ [index: string]: C; }'.
                    ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
    var r2a3 = a3 > b3;
               ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
               ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types '{ [index: number]: Base; }' and '{ [index: number]: C; }'.
                    ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
    var r2a4 = a4 > b4;
               ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
    
    var r2b1 = b1 > a1;
               ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
               ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types '{ [b: string]: number; }' and '{ [a: string]: string; }'.
                    ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
    var r2b2 = b2 > a2;
               ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
               ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types '{ [index: string]: C; }' and '{ [index: string]: Base; }'.
                    ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    var r2b3 = b3 > a3;
               ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
               ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types '{ [index: number]: C; }' and '{ [index: number]: Base; }'.
                    ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    var r2b4 = b4 > a4;
               ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
    
    // operator <=
    var r3a1 = a1 <= b1;
               ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
               ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types '{ [a: string]: string; }' and '{ [b: string]: number; }'.
                     ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
    var r3a2 = a2 <= b2;
               ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
               ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types '{ [index: string]: Base; }' and '{ [index: string]: C; }'.
                     ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
    var r3a3 = a3 <= b3;
               ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
               ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types '{ [index: number]: Base; }' and '{ [index: number]: C; }'.
                     ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
    var r3a4 = a4 <= b4;
               ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
    
    var r3b1 = b1 <= a1;
               ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
               ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types '{ [b: string]: number; }' and '{ [a: string]: string; }'.
                     ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
    var r3b2 = b2 <= a2;
               ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
               ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types '{ [index: string]: C; }' and '{ [index: string]: Base; }'.
                     ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    var r3b3 = b3 <= a3;
               ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
               ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types '{ [index: number]: C; }' and '{ [index: number]: Base; }'.
                     ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    var r3b4 = b4 <= a4;
               ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
    
    // operator >=
    var r4a1 = a1 >= b1;
               ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
               ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types '{ [a: string]: string; }' and '{ [b: string]: number; }'.
                     ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
    var r4a2 = a2 >= b2;
               ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
               ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types '{ [index: string]: Base; }' and '{ [index: string]: C; }'.
                     ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
    var r4a3 = a3 >= b3;
               ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
               ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types '{ [index: number]: Base; }' and '{ [index: number]: C; }'.
                     ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
    var r4a4 = a4 >= b4;
               ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
    
    var r4b1 = b1 >= a1;
               ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
               ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types '{ [b: string]: number; }' and '{ [a: string]: string; }'.
                     ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
    var r4b2 = b2 >= a2;
               ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
               ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types '{ [index: string]: C; }' and '{ [index: string]: Base; }'.
                     ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    var r4b3 = b3 >= a3;
               ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
               ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types '{ [index: number]: C; }' and '{ [index: number]: Base; }'.
                     ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    var r4b4 = b4 >= a4;
               ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
    
    // operator ==
    var r5a1 = a1 == b1;
               ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
               ~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '{ [a: string]: string; }' and '{ [b: string]: number; }' have no overlap.
                     ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
    var r5a2 = a2 == b2;
               ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
               ~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '{ [index: string]: Base; }' and '{ [index: string]: C; }' have no overlap.
                     ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
    var r5a3 = a3 == b3;
               ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
               ~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '{ [index: number]: Base; }' and '{ [index: number]: C; }' have no overlap.
                     ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
    var r5a4 = a4 == b4;
               ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
    
    var r5b1 = b1 == a1;
               ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
               ~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '{ [b: string]: number; }' and '{ [a: string]: string; }' have no overlap.
                     ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
    var r5b2 = b2 == a2;
               ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
               ~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '{ [index: string]: C; }' and '{ [index: string]: Base; }' have no overlap.
                     ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    var r5b3 = b3 == a3;
               ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
               ~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '{ [index: number]: C; }' and '{ [index: number]: Base; }' have no overlap.
                     ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    var r5b4 = b4 == a4;
               ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
    
    // operator !=
    var r6a1 = a1 != b1;
               ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
               ~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '{ [a: string]: string; }' and '{ [b: string]: number; }' have no overlap.
                     ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
    var r6a2 = a2 != b2;
               ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
               ~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '{ [index: string]: Base; }' and '{ [index: string]: C; }' have no overlap.
                     ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
    var r6a3 = a3 != b3;
               ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
               ~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '{ [index: number]: Base; }' and '{ [index: number]: C; }' have no overlap.
                     ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
    var r6a4 = a4 != b4;
               ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
    
    var r6b1 = b1 != a1;
               ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
               ~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '{ [b: string]: number; }' and '{ [a: string]: string; }' have no overlap.
                     ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
    var r6b2 = b2 != a2;
               ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
               ~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '{ [index: string]: C; }' and '{ [index: string]: Base; }' have no overlap.
                     ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    var r6b3 = b3 != a3;
               ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
               ~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '{ [index: number]: C; }' and '{ [index: number]: Base; }' have no overlap.
                     ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    var r6b4 = b4 != a4;
               ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
    
    // operator ===
    var r7a1 = a1 === b1;
               ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
               ~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '{ [a: string]: string; }' and '{ [b: string]: number; }' have no overlap.
                      ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
    var r7a2 = a2 === b2;
               ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
               ~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '{ [index: string]: Base; }' and '{ [index: string]: C; }' have no overlap.
                      ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
    var r7a3 = a3 === b3;
               ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
               ~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '{ [index: number]: Base; }' and '{ [index: number]: C; }' have no overlap.
                      ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
    var r7a4 = a4 === b4;
               ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
    
    var r7b1 = b1 === a1;
               ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
               ~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '{ [b: string]: number; }' and '{ [a: string]: string; }' have no overlap.
                      ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
    var r7b2 = b2 === a2;
               ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
               ~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '{ [index: string]: C; }' and '{ [index: string]: Base; }' have no overlap.
                      ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    var r7b3 = b3 === a3;
               ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
               ~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '{ [index: number]: C; }' and '{ [index: number]: Base; }' have no overlap.
                      ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    var r7b4 = b4 === a4;
               ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
    
    // operator !==
    var r8a1 = a1 !== b1;
               ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
               ~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '{ [a: string]: string; }' and '{ [b: string]: number; }' have no overlap.
                      ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
    var r8a2 = a2 !== b2;
               ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
               ~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '{ [index: string]: Base; }' and '{ [index: string]: C; }' have no overlap.
                      ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
    var r8a3 = a3 !== b3;
               ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
               ~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '{ [index: number]: Base; }' and '{ [index: number]: C; }' have no overlap.
                      ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
    var r8a4 = a4 !== b4;
               ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
    
    var r8b1 = b1 !== a1;
               ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
               ~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '{ [b: string]: number; }' and '{ [a: string]: string; }' have no overlap.
                      ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
    var r8b2 = b2 !== a2;
               ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
               ~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '{ [index: string]: C; }' and '{ [index: string]: Base; }' have no overlap.
                      ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    var r8b3 = b3 !== a3;
               ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
               ~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '{ [index: number]: C; }' and '{ [index: number]: Base; }' have no overlap.
                      ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    var r8b4 = b4 !== a4;
               ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'a4' is used before being assigned.